Made the .js and .jon to load the enemies data and images with fetch and DOM manipulation. Improved the css with colors

--- a/index.html
+++ b/index.html
@@ -11,36 +11,18 @@
 <body>
 
     <header>
-        <img src="./img/00logo.png" alt="Logo" class="logo">
-        <p>RPG Enemies</p>
+        <nav class="header-nav">
+            <img src="./img/00logo.png" alt="Logo" class="logo">
+            <h2>RPG Enemies</h2>
+        </nav>
+
     </header>
 
     <main>
-        <h1>Low level</h1>
+        <h1>Enemies</h1>
 
-        <div>
-            <h2>Images</h2>
-
-            <ul>
-                <li><img src="./img/01goblin.png" alt="Goblin img" class="monster-img"></li>
-                <li><img src="./img/02kobold.png" alt="Kobold img" class="monster-img"></li>
-                <li><img src="./img/03slime.png" alt="Slime img" class="monster-img"></li>
-                <li><img src="./img/04bug.png" alt="Bug img" class="monster-img"></li>
-                <li><img src="./img/05imp.png" alt="Imp img" class="monster-img"></li>
-                <li><img src="./img/06ghost.png" alt="Ghost img" class="monster-img"></li>
-            </ul>
-        </div>
-
-        <div>
-            <h2>Enemy list</h2>
-            <ol>
-                <li>Goblin</li>
-                <li>Kobold</li>
-                <li>Slime</li>
-                <li>Bug</li>
-                <li>Imp</li>
-                <li>Ghost</li>
-            </ol>
+        <div id="enemies-container">
+            <p>Loading...</p>
         </div>
     </main>
 
@@ -49,7 +31,7 @@
     </footer>
 
 
-
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
