added more enemies with their images. Added a button to change the page for a Gacha

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <nav class="header-nav">
             <img src="./img/00logo.png" alt="Logo" class="logo">
             <h2>RPG Enemies</h2>
+            <button id="pageButton">Change page</button>
         </nav>
 
     </header>
 
-    <main>
+    <main id="page">
         <h1>Enemies</h1>
 
         <div id="enemies-container">
